src/test/resources/public/input/typechecking/fail/ternary/fail01.jova
class Cls{
	
	private int func(){
		
		int a;
		bool b;
		b = false;
		a = "string" ? 4 : 2;
		return a;
		
	}

}